PackageCode/objects/WSLR_Target_Program__c.object
<CustomObject>
    <description>US object for SAP Targets at WSLR Level</description>
    <fields>
        <fullName>Account_Target_Level__c</fullName>
        <inlineHelpText>What is the level of achievement required for the Accounts that participate in this program? e.g. 13, 4, 3</inlineHelpText>
        <label>Account Target Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achievement_Goal__c</fullName>
        <inlineHelpText>What percentage of Account Adherence should this wholesaler achieve for this Program?</inlineHelpText>
        <label>Achievement % Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <label>Brand Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>WSLR_NBR+CHANNEL+BRANDCATEGORY</inlineHelpText>
        <label>External ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Target_Type__c</fullName>
        <label>Program Target Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WSLR_NBR__c</fullName>
        <label>WSLR_NBR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <inlineHelpText>To which wholesaler is this target program applied?</inlineHelpText>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WSLR Target Programs</relationshipLabel>
        <relationshipName>WSLR_Target_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WSLR Target Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand_Category__c</columns>
        <columns>Channel__c</columns>
        <columns>Account_Target_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>ONP</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WTP-{00000}</displayFormat>
        <label>WSLR Target Program Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WSLR Target Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>